--- a/docs/modules/ROOT/pages/user-guide/pages.adoc
+++ b/docs/modules/ROOT/pages/user-guide/pages.adoc
@@ -1,13 +1,13 @@
 = Pages
 
-A page is a collection of link:Reports[reports] that can be viewed at
+A page is a collection of link:../Reports[reports] that can be viewed at
 the same time. Each page can have an unlimited number of reports in it,
 and will switch to a scrollable view when the number of reports do not
 fit in the user’s window.
 
 An example of a dashboard with 4 pages can be seen below:
 
-image::img/page.png[Page]
+image::page.png[Page]
 
 A dashboard may have as many pages as required by the dashboard builder.
 To switch pages, simply click on the page title in the dashboard header.
