--- a/docs/modules/ROOT/pages/user-guide/reports/markdown.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/markdown.adoc
@@ -1,3 +1,5 @@
+= Markdown
+
 Markdown reports let you specify
 https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#styling-text[Markdown]
 text, to be renderer as rich HTML. This lets you turn your dashboards
@@ -17,7 +19,7 @@ Check out this cool image:
 ![image](https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/how-to-keep-ducks-call-ducks-1615457181.jpg?resize=240:*)
 ....
 
-image::./img/markdown.png[Basic Markdown]
+image::markdown.png[Basic Markdown]
 
 == Advanced Settings
 
