--- a/docs/modules/ROOT/pages/user-guide/reports/table.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/table.adoc
@@ -1,3 +1,5 @@
+= Table
+
 The most common report in a dashboard is often a simple table view.
 NeoDash contains a powerful table component that can render all the data
 returned by a Cypher query. This includes simple data like numbers or
@@ -18,7 +20,7 @@ MATCH (n:Movie)<-[:ACTED_IN]-(p:Person)
 RETURN n.title, n.released, count(p) as actors
 ....
 
-image::./img/table1.png[Basic Table]
+image::table1.png[Basic Table]
 
 === Table with nodes / collections
 
@@ -27,11 +29,11 @@ MATCH (n:Movie)<-[:ACTED_IN]-(p:Person)
 RETURN n, collect(p.name) as actors LIMIT 200
 ....
 
-image::./img/table2.png[Table with nodes / collections]
+image::table2.png[Table with nodes / collections]
 
 == Advanced Settings
 
-[width="100%",cols="12%,6%,6%,76%",options="header",]
+[width="100%",cols="12%,6%,26%,56%",options="header",]
 |===
 |Name |Type |Default Value |Description
 |Transpose Rows & Columns |on/off |off |when activated, transposes the
@@ -54,7 +56,7 @@ and will need to be executed manually.
 
 == Rule-Based Styling
 
-Using the link:Reports#rule-based-styling[Rule-Based Styling] menu, the
+Using the link:../#_rule_based_styling[Rule-Based Styling] menu, the
 following style rules can be applied to the table: 
 
 - The background color of an entire row in a table. 
