--- a/docs/modules/ROOT/pages/Quickstart.adoc
+++ b/docs/modules/ROOT/pages/Quickstart.adoc
@@ -28,9 +28,9 @@ page.
 
 == NeoDash in Five Minutes
 
-The video below explains how to get started with NeoDash in 5 minutes:
+See the video below for tips on how to get started with NeoDash in 5 minutes:
 https://www.youtube.com/watch?v=Ygzj0Y4cYm4[image:https://img.youtube.com/vi/Ygzj0Y4cYm4/0.jpg[Youtube
 Video]]
 
-See also the link:./FAQ#1-how-can-i-learn-more-about-neodash[list of
+See also the link:../user-guide/FAQ#1-how-can-i-learn-more-about-neodash[list of
 blog posts] in the FAQ.
