--- a/docs/modules/ROOT/pages/developer-guide/configuration.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/configuration.adoc
@@ -2,12 +2,12 @@
 
 When using a custom NeoDash deployment, there are several settings that
 can be configured. These mostly relate to
-link:Standalone%20Mode[Standalone Mode] and SSO configurations.
+link:../Standalone-Mode[Standalone Mode] and SSO configurations.
 
 For a simple (non-Dockerized) deployment, these configuration parameters
 can be changed by modifying `dist/config.json` after you have built the
 application. When Docker image, these can be passed as environment
-variables. See link:Standalone%20Mode[Standalone Mode] for more on
+variables. See link:../Standalone-Mode[Standalone Mode] for more on
 Docker deployments.
 
 An example configuration for NeoDash (default, running in editor mode)
