--- a/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/standalone-mode.adoc
@@ -13,11 +13,11 @@ Running in standalone modec mode will:
 The diagram below illustrates how NeoDash standalone mode can be
 deployed next to a standard `Editor Mode' instance:
 
-image:./img/standalone-architecture.png[image]
+image:standalone-architecture.png[image]
 
 == Option 1 - Standard Deployment (Non-Docker)
 
-First, build NeoDash as described link:Run%20&%20Build[here]. After
+First, build NeoDash as described link:../Build-and-Run[here]. After
 building, you’ll have a `dist` directory that you can deploy to a web
 server.
 
@@ -51,7 +51,7 @@ docker run  -it --rm -p 5005:5005 \
 ....
 
 Make sure that all of the environment variables are set to the correct
-values. This is described in more detail link:Configuration[here].
+values. This is described in more detail link:../Configuration[here].
 
 ____
 Alternatively, environment variables from docker compose or a kubernetes
