--- a/docs/modules/ROOT/pages/developer-guide/testing.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/testing.adoc
@@ -22,7 +22,7 @@ To run Cypress from the UI.
 Before starting the tests, make sure you have a local instance of
 NeoDash running at `http://localhost:3000` using `npm run dev`.
 
-image:./img/cypress.png[Cypress] Above: a screenshot of the Cypress GUI.
+image:cypress.png[Cypress] Above: a screenshot of the Cypress GUI.
 
 == Debug Report
 
@@ -33,4 +33,4 @@ NeoDash application.
 To generate a debug report, open the `About' screen. Then, click the
 'Debug Report' button in the bottom left corner.
 
-image::./img/about.png[About]
+image::about.png[About]
