--- a/docs/modules/ROOT/pages/user-guide/reports/raw-json.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/raw-json.adoc
@@ -1,3 +1,5 @@
+= Raw JSON
+
 The Raw JSON report renders the JSON response received from Neo4j
 directly. This is typically used for debugging queries, or,
 understanding the exact data types being returned from Neo4j.
@@ -11,7 +13,7 @@ MATCH (n)
 RETURN COUNT(n)
 ....
 
-image::./img/json.png[Basic Value]
+image::json.png[Basic Value]
 
 == Advanced Settings
 
