--- a/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/sunburst.adoc
@@ -1,3 +1,5 @@
+= Sunburst
+
 A sunburst chart will render hierarchical data in a multi-level pie
 visualization. It takes two fields: 
 
@@ -17,11 +19,11 @@ WITH  [n IN no[..-1] | n.name] AS result, sum(leaf.employees) as val
 RETURN result, val
 ----
 
-image::./img/sunburst.png[Sunburst Chart]
+image::sunburst.png[Sunburst Chart]
 
 == Advanced Settings
 
-[width="100%",cols="19%,2%,6%,73%",options="header",]
+[width="100%",cols="19%,2%,26%,53%",options="header",]
 |===
 |Name |Type |Default Value |Description
 |Show Values on Arcs |on/off |off |If enabled, show the category values
