Updated docs with new default value for heatmap markers

--- a/docs/modules/ROOT/pages/user-guide/reports/map.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/map.adoc
@@ -80,7 +80,7 @@ image::map3.png[Artificial Map Data]
 |===
 |Name |Type |Default Value |Description
 |Layer Type |List |markers |Allows you to choose between the standard map with markers, or a heatmap.
-|Cluster markers |on/off |on |Whether to automatically cluster and expand the markers on the map.
+|Cluster markers |on/off |off |Whether to automatically cluster and expand the markers on the map.
 |Node Color Scheme |List |neodash |The color scheme to use for the node
 labels. Colors are assigned automatically (consequitevely) to the
 different labels returned by the Cypher query.
