--- a/docs/modules/ROOT/pages/quickstart.adoc
+++ b/docs/modules/ROOT/pages/quickstart.adoc
@@ -32,5 +32,5 @@ See the video below for tips on how to get started with NeoDash in 5 minutes:
 https://www.youtube.com/watch?v=Ygzj0Y4cYm4[image:https://img.youtube.com/vi/Ygzj0Y4cYm4/0.jpg[Youtube
 Video]]
 
-See also the link:../user-guide/FAQ#1-how-can-i-learn-more-about-neodash[list of
+See also the link:../user-guide/faq#1-how-can-i-learn-more-about-neodash[list of
 blog posts] in the FAQ.
