Update faq.adoc (#179)
* Update faq.adoc

Decapitalize link location.

* Update faq.adoc

Co-authored-by: Niels de Jong <Niels-121@hotmail.com>

--- a/docs/modules/ROOT/pages/user-guide/faq.adoc
+++ b/docs/modules/ROOT/pages/user-guide/faq.adoc
@@ -39,7 +39,7 @@ ____
 == 3. Can I publish the dashboard that I built?
 
 When you’re done building a dashboard and want to show to others as a
-read-only web page, you can set up a link:Standalone%20Mode[Standalone
+read-only web page, you can set up a link:standalone%20mode[Standalone
 Mode] deployment of NeoDash.
 
 If you need help setting this up, please contact the
