--- a/docs/modules/ROOT/pages/user-guide/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/index.adoc
@@ -3,10 +3,10 @@
 The following pages contain everything you need to get started with NeoDash.
 
 
-* link:../Quickstart[Quickstart] tells you how to get started with NeoDash right away.
-* link:Dashboards[Dashboards] elaborates on how dashboards are created and used in
+* link:../quickstart[Quickstart] tells you how to get started with NeoDash right away.
+* link:dashboards[Dashboards] elaborates on how dashboards are created and used in
 NeoDash.
-* link:Pages[Pages] explains how to manage pages inside a dashboard.
-* link:Reports[Reports] contains information on how a report works, and lists the
+* link:pages[Pages] explains how to manage pages inside a dashboard.
+* link:reports[Reports] contains information on how a report works, and lists the
 different types that can be used.
-* link:Publishing[Publishing] explains how to publish a dashboard for others to view.
+* link:publishing[Publishing] explains how to publish a dashboard for others to view.
