--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -104,17 +104,17 @@ will be used. If no rules are matched, the default style will be used.
 To learn more about a specific report type, see one of the following
 pages: 
 
-- link:Table[Table] 
-- link:Graph[Graph]
-- link:Bar%20Chart[Bar Chart]
-- link:Pie%20Chart[Pie Chart] 
-- link:Line%20Chart[Line Chart] 
-- link:Sunburst[Sunburst]
-- link:Circle%20Packing[Circle Packing] 
-- link:Treemap[Treemap]
-- link:Map[Map]
-- link:Single%20Value[Single Value] 
-- link:Raw%20JSON[Raw JSON] 
-- link:Parameter%20Select[Parameter Select] 
-- link:iFrame[iFrame]
-- link:Markdown[Markdown]
+- link:table[Table] 
+- link:graph[Graph]
+- link:bar%20chart[Bar Chart]
+- link:pie%20chart[Pie Chart] 
+- link:line%20chart[Line Chart] 
+- link:sunburst[Sunburst]
+- link:circle%20packing[Circle Packing] 
+- link:treemap[Treemap]
+- link:map[Map]
+- link:single%20value[Single Value] 
+- link:raw%20json[Raw JSON] 
+- link:parameter%20select[Parameter Select] 
+- link:iframe[iFrame]
+- link:markdown[Markdown]
