--- a/docs/modules/ROOT/pages/developer-guide/configuration.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/configuration.adoc
@@ -2,7 +2,7 @@
 
 When using a custom NeoDash deployment, there are several settings that
 can be configured. These mostly relate to
-link:../Standalone-Mode[Standalone Mode] and SSO configurations.
+link:../standalone-mode[Standalone Mode] and SSO configurations.
 
 For a simple (non-Dockerized) deployment, these configuration parameters
 can be changed by modifying `dist/config.json` after you have built the
