--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,5 +1,5 @@
 = Introduction
-This wiki contains information on getting started with NeoDash - A Low-Code Dashboard Builder for Neo4j.
+This portal contains information on getting started with NeoDash - A Low-Code Dashboard Builder for Neo4j.
 
 NeoDash is an open source tool for visualizing your Neo4j data. It lets you group visualizations together as dashboards, and allow for interactions between reports.
 
