Fixed some more broken links. Added 2.1.3 release notes

--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -106,15 +106,15 @@ pages:
 
 - link:table[Table] 
 - link:graph[Graph]
-- link:bar%20chart[Bar Chart]
-- link:pie%20chart[Pie Chart] 
-- link:line%20chart[Line Chart] 
+- link:bar-chart[Bar Chart]
+- link:pie-chart[Pie Chart] 
+- link:line-chart[Line Chart] 
 - link:sunburst[Sunburst]
-- link:circle%20packing[Circle Packing] 
+- link:circle-packing[Circle Packing] 
 - link:treemap[Treemap]
 - link:map[Map]
-- link:single%20value[Single Value] 
-- link:raw%20json[Raw JSON] 
-- link:parameter%20select[Parameter Select] 
+- link:single-value[Single Value] 
+- link:raw-json[Raw JSON] 
+- link:parameter-select[Parameter Select] 
 - link:iframe[iFrame]
 - link:markdown[Markdown]
